# slm-guardrail

./: .gitignore  ARCHITECTURE.md  PHASES.md  PROGRESS.md  PROPOSAL.md  README.md  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  COMPILER.md  DEVELOPMENT_LOG.md  RUNNING_XLMR.md  SUPPORTED_REGIONS.md
kchat-skills/benchmarks/: README.md  bonsai_1.7b_mock_results.json  bonsai_1.7b_results.json  xlmr_minilm_l6_mock_results.json  xlmr_minilm_l6_results.json  xlmr_mock_results.json  xlmr_results.json
kchat-skills/communities/: adult_only.yaml  book_club.yaml  cooking.yaml  creative_arts.yaml  dating.yaml  education_higher.yaml  emergency_response.yaml  environmental.yaml  family.yaml  fitness.yaml  gaming.yaml  health_support.yaml  hobbyist.yaml  journalism.yaml  language_learning.yaml  legal_support.yaml  lgbtq_support.yaml  marketplace.yaml  mental_health.yaml  music.yaml  neighborhood.yaml  nonprofit.yaml  open_source.yaml  parenting.yaml  pet_owners.yaml  photography.yaml  political.yaml  religious.yaml  school.yaml  science.yaml  seniors.yaml  sports.yaml  startup.yaml  tech_support.yaml  travel.yaml  veterans.yaml  volunteer.yaml  workplace.yaml
kchat-skills/communities/_template/: overlay.yaml
kchat-skills/compiler/: anti_misuse.py  appeal_flow.py  benchmark.py  bias_audit.py  compiler.py  counters.py  encoder_adapter.py  llama_cpp_adapter.py  metric_validator.py  pack_lifecycle.py  pipeline.py  skill_passport.py  skill_passport.schema.json  slm_adapter.py  threshold_policy.py  train_xlmr_head.py  training_data.py  xlmr_adapter.py  xlmr_minilm_adapter.py
kchat-skills/compiler/data/: xlmr_head.json  xlmr_head.npz  xlmr_minilm_head.json  xlmr_minilm_head.pt
kchat-skills/docs/: README.md
kchat-skills/docs/regulatory/: README.md  eu_dsa_alignment.md  nist_ai_rmf_alignment.md  unicef_itu_cop_alignment.md
kchat-skills/eval/: README.md  eval_runner.py  eval_template.yaml  held_out_adversarial.yaml  held_out_benign.yaml
kchat-skills/global/: baseline.yaml  local_signal_schema.json  output_schema.json  privacy_contract.yaml  severity.yaml  taxonomy.yaml
kchat-skills/jurisdictions/_template/: overlay.yaml
kchat-skills/jurisdictions/ae/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ar/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/archetype-strict-adult/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/archetype-strict-hate/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/archetype-strict-marketplace/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/at/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/au/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/bd/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/br/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ca/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ch/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/cl/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/co/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/cz/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/de/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/dk/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/dz/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ec/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/eg/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/es/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/et/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/fi/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/fr/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/gb/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/gh/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/gr/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/hu/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/id/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ie/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/il/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/in/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/iq/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/it/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/jp/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ke/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/kr/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ma/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/mx/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/my/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/ng/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/nl/: normalization.yaml  overlay.yaml
kchat-skills/jurisdictions/no/: normalization.yaml  overlay.yaml
kchat-skills/prompts/: README.md  compiled_prompt_format.md  runtime_instruction.txt
kchat-skills/samples/: README.md  sample_messages.yaml
kchat-skills/tests/: test_suite_template.yaml  test_test_suite_template.py
results/: README.md  demo_results_2026-04-30T23-18-15Z.json  demo_results_2026-04-30T23-18-15Z.md  demo_results_2026-04-30T23-45-07Z.json  demo_results_2026-04-30T23-45-07Z.md  demo_results_2026-05-01T14-28-55Z.json  demo_results_2026-05-01T14-28-55Z.md  demo_results_2026-05-01T15-49-18Z.md  demo_results_2026-05-02T01-41-56Z.json  demo_results_2026-05-02T01-41-56Z.md  demo_results_2026-05-02T12-42-02Z.json  demo_results_2026-05-02T12-42-02Z.md  demo_results_2026-05-03T06-05-25Z.json  demo_results_2026-05-03T06-05-25Z.md
results/archive/: demo_results_2026-05-01T15-49-18Z.json  demo_results_2026-05-01T15-49-18Z.md  demo_results_2026-05-02T01-41-56Z.md  demo_results_2026-05-02T12-42-02Z.md
tools/: demo_guardrail.py  export_xlmr_onnx.py  regenerate_compiled_examples.py  run_benchmark.sh  run_guardrail_demo.py
(+305 files in other folders)
