[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kchat-guardrail"
version = "0.0.0"
description = "KChat Guardrail Skills — on-device safety skill packs for E2EE messaging, backed by the XLM-R encoder classifier (ONNX Runtime)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "cryptography>=42.0",
    # The XLM-R adapter degrades to a SAFE fallback when
    # onnxruntime / sentencepiece / numpy are missing, so unit tests
    # do not strictly require them — but the encoder-head tests use
    # ``numpy`` for stub embeddings, hence the soft dep here.
    "onnxruntime>=1.16.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
]
# Demo / sample-data dependencies for `tools/run_guardrail_demo.py` and
# `tools/demo_guardrail.py`. The XLM-R adapter requires onnxruntime +
# sentencepiece + numpy; the demo additionally loads the sample-message
# YAML.
demo = [
    "PyYAML>=6.0",
    "onnxruntime>=1.16.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["kchat-skills/tests"]
python_files = ["test_*.py"]
addopts = "-ra"
pythonpath = ["kchat-skills/compiler"]
