[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kchat-guardrail"
version = "0.0.0"
description = "KChat Guardrail Skills — on-device safety skill packs for E2EE messaging, backed by the XLM-R encoder classifier (ONNX Runtime)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "cryptography>=42.0",
    # The XLM-R adapter degrades to a SAFE fallback when
    # onnxruntime / sentencepiece / numpy are missing, so unit tests
    # do not strictly require them — but the encoder-head tests use
    # ``numpy`` for stub embeddings, hence the soft dep here.
    "onnxruntime>=1.16.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
]
# Demo / sample-data dependencies for `tools/run_guardrail_demo.py` and
# `tools/demo_guardrail.py`. The XLM-R adapter requires onnxruntime +
# sentencepiece + numpy; the demo additionally loads the sample-message
# YAML.
demo = [
    "PyYAML>=6.0",
    "onnxruntime>=1.16.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
]
# One-time ONNX export deps for `tools/export_xlmr_onnx.py`. Not
# required at runtime — the on-device adapter only needs onnxruntime
# + sentencepiece + numpy. ``transformers<5`` is pinned because v5
# changed the positional signature of ``XLMRobertaModel.forward()``
# and breaks the legacy ``torch.onnx`` tracer used by the export
# script (see the export script's module docstring for details).
export = [
    "transformers<5",
    # torch.onnx.export(..., dynamo=False) requires torch>=2.5 (the
    # ``dynamo`` kwarg was added then). We pass it explicitly in
    # tools/export_xlmr_onnx.py because the dynamo path produces a
    # graph that onnxruntime cannot load (see the export script's
    # module docstring for details).
    "torch>=2.5",
    "onnx>=1.15",
    "onnxscript>=0.1",
    "onnxruntime>=1.16.0",
    "sentencepiece>=0.1.99",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["kchat-skills/tests"]
python_files = ["test_*.py"]
addopts = "-ra"
pythonpath = ["kchat-skills/compiler"]
